fixed hidden scrollbar

--- a/css/urank.css
+++ b/css/urank.css
@@ -1222,7 +1222,7 @@ Document Panel (right) - for visualizing highlighted text
     overflow-y: scroll;
     overflow-x: hidden;
     margin-right: -100px;
-    padding-right: 100px;
+    padding-right: 84px;
 }
 /*
 
